# myriad-node-parachain

./: Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: cicd.yaml  cii.yaml  docker-scripts-test.yml
.maintain/: benchmark.sh
.maintain/docker/: Dockerfile  docker-compose.yml  injected-binnary.Dockerfile  start-docker-compose.sh  stop-docker-compose.sh
node/: Cargo.toml
node/res/: commands-to-generate.sh  edited-parachain-chainspec.json  edited-plain-parachain-spec.json  para-4005-genesis-state  para-4005-wasm  para-4242-genesis-state  para-4242-wasm  paseo-parachain-chainspec.json  paseo-parachain.json  plain-parachain-chainspec.json  plain-parachain-spec.json  raw-parachain-chainspec.json  raw-paseo-parachain-chainspec.json  rococo-parachain.json
node/res/local/: para-2000-genesis-state  para-2000-wasm  plain-parachain-chainspec.json  raw-parachain-chainspec.json
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/access_token/: Cargo.toml
pallets/access_token/src/: functions.rs  impl_access_token.rs  impl_server.rs  interface.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/server/: Cargo.toml
pallets/server/src/: functions.rs  impl_server.rs  interface.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/tipping/: Cargo.toml
pallets/tipping/src/: benchmarking.rs  functions.rs  impl_tipping.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
