[package]
authors = ['Myriad Dev Team <dev@myriad.social>']
build = 'build.rs'
edition = '2021'
homepage = 'https://myriad.social'
license = 'AGPL-3.0'
name = 'myriad'
repository = 'https://github.com/myriadsocial/myriad-node'
version = '0.0.1'

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }

[dependencies]
# External Dependencies
clap = { version = '4.1.8', features = ['derive'] }
codec = { package = 'parity-scale-codec', version = '3.0.0' }
jsonrpsee = { version = '0.16.2', features = ['server'] }
log = '0.4.17'
serde = { version = '1.0.152', features = ['derive'] }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-cli = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-network = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-network-sync = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-service = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-sysinfo = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-tracing = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-api = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-io = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-session = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40' }
try-runtime-cli = { git = 'https://github.com/paritytech/substrate.git', 'branch' = 'polkadot-v0.9.40', optional = true }

# Polkadot Dependencies
polkadot-cli = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40' }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40' }
polkadot-service = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40' }
xcm = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40', default-features = false }

# Cumulus Dependencies
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40' }
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40' }
cumulus-relay-chain-interface = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40' }

# Local Dependencies
myriad-runtime = { path = '../runtime' }

[features]
default = []
runtime-benchmarks = [
	'myriad-runtime/runtime-benchmarks',
	'polkadot-cli/runtime-benchmarks',
	'try-runtime-cli/try-runtime',
]
try-runtime = [
	'myriad-runtime/try-runtime',
	'try-runtime-cli/try-runtime',
]
