[package]
authors = ['Myriad Dev Team <dev@myriad.social>']
build = 'build.rs'
edition = '2021'
homepage = 'https://myriad.social'
license = 'AGPL-3.0'
name = 'myriad-runtime'
repository = 'https://github.com/myriadsocial/myriad-node'
version = '2.3.6'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', 'branch' = 'polkadot-v0.9.40' }

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
hex-literal = { version = '0.3.4', optional = true }
log = { version = '0.4.17', default-features = false }
scale-info = { version = '2.1.1', default-features = false, features = ['derive'] }
smallvec = '1.10.0'

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false, optional = true }
frame-executive = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false, optional = true }
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-collective = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-democracy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-preimage = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false, features = ['historical'] }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }

# Polkadot Dependencies
polkadot-pallet-xcm = { package = 'pallet-xcm', git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40', default-features = false }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40', default-features = false }
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40', default-features = false }
polkadot-xcm = { package = 'xcm', git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40', default-features = false }
polkadot-xcm-builder = { package = 'xcm-builder', git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40', default-features = false }
polkadot-xcm-executor = { package = 'xcm-executor', git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.40', default-features = false }

# Cumulus Dependencies
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-pallet-collator-selection = { package = 'pallet-collator-selection', git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-pallet-parachain-info = { package = 'parachain-info', git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-pallet-session-benchmarking = {git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false, version = '3.0.0'}
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.40', default-features = false }

# Local Dependencies
pallet-server = { path = '../pallets/server', default-features = false }
pallet-tipping = { path = '../pallets/tipping', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
	# External Dependencies
	'hex-literal',

	# Substrate Dependencies
	'frame-benchmarking/runtime-benchmarks',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	'frame-system-benchmarking/runtime-benchmarks',
	'pallet-assets/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-democracy/runtime-benchmarks',
	'pallet-preimage/runtime-benchmarks',
	'pallet-scheduler/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',

	# Polkadot Dependencies
	'polkadot-pallet-xcm/runtime-benchmarks',
	'polkadot-xcm-builder/runtime-benchmarks',

	# Cumulus Dependencies
	'cumulus-pallet-collator-selection/runtime-benchmarks',
	'cumulus-pallet-session-benchmarking/runtime-benchmarks',
	'cumulus-pallet-xcmp-queue/runtime-benchmarks',

	# Local Dependencies
	'pallet-server/runtime-benchmarks',
	'pallet-tipping/runtime-benchmarks',
]
std = [
	# External Dependencies
	'codec/std',
	'log/std',
	'scale-info/std',

	# Substrate Dependencies
	'frame-executive/std',
	'frame-support/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	'frame-try-runtime/std',
	'pallet-assets/std',
	'pallet-aura/std',
	'pallet-authorship/std',
	'pallet-balances/std',
	'pallet-collective/std',
	'pallet-democracy/std',
	'pallet-preimage/std',
	'pallet-scheduler/std',
	'pallet-session/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',

	# Polkadot Dependencies
	'polkadot-pallet-xcm/std',
	'polkadot-parachain/std',
	'polkadot-runtime-common/std',
	'polkadot-xcm/std',
	'polkadot-xcm-builder/std',
	'polkadot-xcm-executor/std',

	# Cumulus Dependencies
	'cumulus-pallet-aura-ext/std',
	'cumulus-pallet-collator-selection/std',
	'cumulus-pallet-dmp-queue/std',
	'cumulus-pallet-parachain-info/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-primitives-core/std',
	'cumulus-primitives-timestamp/std',
	'cumulus-primitives-utility/std',

	# Local Dependencies
	'pallet-server/std',
	'pallet-tipping/std',
]
try-runtime = [
	# Substrate Dependencies
	'frame-executive/try-runtime',
	'frame-support/try-runtime',
	'frame-system/try-runtime',
	'frame-try-runtime',
	'pallet-assets/try-runtime',
	'pallet-aura/try-runtime',
	'pallet-authorship/try-runtime',
	'pallet-balances/try-runtime',
	'pallet-collective/try-runtime',
	'pallet-democracy/try-runtime',
	'pallet-preimage/try-runtime',
	'pallet-scheduler/try-runtime',
	'pallet-session/try-runtime',
	'pallet-sudo/try-runtime',
	'pallet-timestamp/try-runtime',
	'pallet-transaction-payment/try-runtime',

	# Polkadot Dependencies
	'polkadot-pallet-xcm/try-runtime',

	# Cumulus Dependencies
	'cumulus-pallet-aura-ext/try-runtime',
	'cumulus-pallet-collator-selection/try-runtime',
	'cumulus-pallet-dmp-queue/try-runtime',
	'cumulus-pallet-parachain-info/try-runtime',
	'cumulus-pallet-parachain-system/try-runtime',
	'cumulus-pallet-xcm/try-runtime',
	'cumulus-pallet-xcmp-queue/try-runtime',

	# Local Dependencies
]
