[package]
authors = ['Myriad Dev Team <dev@myriad.social>']
build = 'build.rs'
edition = '2021'
homepage = 'https://myriad.social'
license = 'AGPL-3.0'
name = 'myriad-runtime'
repository = 'https://github.com/myriadsocial/myriad-node'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', optional = true, branch = 'polkadot-v1.0.0' }

[dependencies]
# External
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
hex-literal = { version = '0.4.1', optional = true }
log = { version = '0.4.20', default-features = false }
scale-info = { version = '2.9.0', default-features = false, features = ['derive'] }
smallvec = '1.11.0'

# Local
pallet-server = { path = '../pallets/server', default-features = false }
pallet-tipping = { path = '../pallets/tipping', default-features = false }

# Substrate
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v1.0.0' }
frame-executive = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
frame-support = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
frame-system = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v1.0.0' }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v1.0.0' }
pallet-aura = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
pallet-session = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v1.0.0', default-features = false }
pallet-collective = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v1.0.0', default-features = false }
pallet-democracy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v1.0.0', default-features = false }
pallet-preimage = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v1.0.0', default-features = false }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v1.0.0', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-session = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }
sp-version = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v1.0.0' }

# Polkadot
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v1.0.0' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v1.0.0' }
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v1.0.0' }
xcm = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v1.0.0' }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v1.0.0' }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', default-features = false, branch = 'release-v1.0.0' }

# Cumulus
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
cumulus-pallet-session-benchmarking = {git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false, version = '3.0.0'}
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
pallet-collator-selection = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }
parachain-info = { git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v1.0.0', default-features = false }

[features]
default = [
	'std',
]
std = [
	# External Dependencies
	'codec/std',
	'log/std',
	'scale-info/std',

	# Substrate Dependencies
	'frame-executive/std',
	'frame-support/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	'frame-try-runtime/std',
	'pallet-assets/std',
	'pallet-aura/std',
	'pallet-authorship/std',
	'pallet-balances/std',
	'pallet-collective/std',
	'pallet-democracy/std',
	'pallet-preimage/std',
	'pallet-scheduler/std',
	'pallet-session/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'substrate-wasm-builder',

	# Polkadot Dependencies
	'pallet-xcm/std',
	'polkadot-parachain/std',
	'polkadot-runtime-common/std',
	'xcm/std',
	'xcm-builder/std',
	'xcm-executor/std',

	# Cumulus Dependencies
	'cumulus-pallet-aura-ext/std',
	'pallet-collator-selection/std',
	'cumulus-pallet-dmp-queue/std',
	'parachain-info/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-primitives-core/std',
	'cumulus-primitives-timestamp/std',
	'cumulus-primitives-utility/std',

	# Local Dependencies
	'pallet-server/std',
	'pallet-tipping/std',
]

runtime-benchmarks = [
	# External Dependencies
	'hex-literal',

	# Substrate Dependencies
	'frame-benchmarking/runtime-benchmarks',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
	'frame-system-benchmarking/runtime-benchmarks',
	'pallet-assets/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-democracy/runtime-benchmarks',
	'pallet-preimage/runtime-benchmarks',
	'pallet-scheduler/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',

	# Polkadot Dependencies
	'pallet-xcm/runtime-benchmarks',
	'xcm-builder/runtime-benchmarks',

	# Cumulus Dependencies
	'pallet-collator-selection/runtime-benchmarks',
	'cumulus-pallet-session-benchmarking/runtime-benchmarks',
	'cumulus-pallet-xcmp-queue/runtime-benchmarks',

	# Local Dependencies
	'pallet-server/runtime-benchmarks',
	'pallet-tipping/runtime-benchmarks',
	
]

try-runtime = [
	# Substrate Dependencies
	'frame-executive/try-runtime',
	'frame-support/try-runtime',
	'frame-system/try-runtime',
	'frame-try-runtime',
	'pallet-assets/try-runtime',
	'pallet-aura/try-runtime',
	'pallet-authorship/try-runtime',
	'pallet-balances/try-runtime',
	'pallet-collective/try-runtime',
	'pallet-democracy/try-runtime',
	'pallet-preimage/try-runtime',
	'pallet-scheduler/try-runtime',
	'pallet-session/try-runtime',
	'pallet-sudo/try-runtime',
	'pallet-timestamp/try-runtime',
	'pallet-transaction-payment/try-runtime',

	# Polkadot Dependencies
	'pallet-xcm/try-runtime',

	# Cumulus Dependencies
	'cumulus-pallet-aura-ext/try-runtime',
	'pallet-collator-selection/try-runtime',
	'cumulus-pallet-dmp-queue/try-runtime',
	'parachain-info/try-runtime',
	'cumulus-pallet-parachain-system/try-runtime',
	'cumulus-pallet-xcm/try-runtime',
	'cumulus-pallet-xcmp-queue/try-runtime',

	# Local Dependencies
]
