[package]
authors = ['Myriad Dev Team <dev@myriad.social>']
edition = '2021'
homepage = 'https://myriad.social'
license = 'AGPL-3.0'
name = 'pallet-server'
repository = 'https://github.com/myriadsocial/myriad-node'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '2.3.1', default-features = false, features = ['derive'] }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }

[dev-dependencies]
# External Dependencies
hex-literal = { version = '0.3.4', default-features = false }
serde = { version = '1.0.152', default-features = false }

# Substrate Dependencies
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.40', default-features = false }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
std = [
	# External Dependencies
	'codec/std',
	'scale-info/std',

	# Substrate Dependencies
	'frame-support/std',
	'frame-system/std',
	'pallet-balances/std',
	'sp-std/std',
]

try-runtime = ['frame-support/try-runtime']
